Fixes for issues 1 & 4

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <!-- New strings -->
     <string name="update_credentials_title">Update Credentials</string>
     <string name="view_data_title">View Saved Data</string>
+    <string name="register_button">Register</string>
 </resources>
