--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,12 +1,10 @@
 <resources>
-    <!-- Existing strings -->
     <string name="app_name">LoginApp</string>
     <string name="username_hint">Username</string>
     <string name="password_hint">Password</string>
+    <string name="confirm_password_hint">Confirm Password</string>
     <string name="login_button">Login</string>
     <string name="invalid_credentials">Invalid credentials!</string>
-
-    <!-- New strings -->
     <string name="update_credentials_title">Update Credentials</string>
     <string name="view_data_title">View Saved Data</string>
     <string name="register_button">Register</string>
